--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simple Resume — Your Name</title>
+  <title>Simple Resume — Sumiyabazar</title>
   <style>
     :root{--accent:#2b8cff;--muted:#6b7280;font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans"}
     *{box-sizing:border-box}
@@ -30,12 +30,12 @@
   <div class="container">
     <header>
       <div>
-        <h1 class="name">Your Name</h1>
-        <div class="title">Job Title · Location</div>
+        <h1 class="name">Sumiyabazar</h1>
+        <div class="title">CS2 player · Location</div>
       </div>
       <div class="contact">
-        Email: you@example.com<br>
-        Phone: +1 (555) 555-5555 · Portfolio: yoursite.com
+        Email: swapsugi@gmail.com<br>
+        Phone: +976 99757000 · Portfolio: yoursite.com
       </div>
     </header>
 
