--- a/Resume.html
+++ b/Resume.html
@@ -3,39 +3,83 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simple Resume — Your Name</title>
+  <title>Simple Resume — Sumiyabazar</title>
   <style>
-    :root{--accent:#2b8cff;--muted:#6b7280;font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans"}
-    *{box-sizing:border-box}
-    body{font-family:var(--font, Inter), sans-serif;background:#f7f7fb;color:#111;line-height:1.45;margin:0;padding:24px}
-    .container{max-width:900px;margin:0 auto;background:#fff;border-radius:10px;padding:28px;box-shadow:0 8px 30px rgba(17,24,39,0.06)}
-    header{display:flex;justify-content:space-between;align-items:start;gap:16px}
-    .name{font-size:28px;font-weight:700;margin:0}
-    .title{color:var(--muted);margin-top:2px}
-    .contact{font-size:14px;color:var(--muted)}
-    section{margin-top:22px}
-    h2{font-size:16px;margin:0 0 10px 0;color:var(--accent)}
-    .item{margin-bottom:12px}
-    .item h3{margin:0;font-size:15px}
-    .meta{font-size:13px;color:var(--muted)}
-    ul{margin:8px 0 0 18px}
-    .skills{display:flex;flex-wrap:wrap;gap:8px}
-    .skill{background:#eef6ff;padding:6px 10px;border-radius:999px;font-size:13px}
-    @media (max-width:600px){header{flex-direction:column;align-items:flex-start}.contact{text-align:left}}
-    /* Print-friendly */
-    @media print{body{padding:0} .container{box-shadow:none;border-radius:0}}
+    :root {
+      --accent: #2b8cff;
+      --muted: #6b7280;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans";
+    }
+    * { box-sizing: border-box }
+    body {
+      font-family: var(--font, Inter), sans-serif;
+      background: #f7f7fb;
+      color: #111;
+      line-height: 1.45;
+      margin: 0;
+      padding: 24px;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 28px;
+      box-shadow: 0 8px 30px rgba(17,24,39,0.06);
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 16px;
+    }
+    .profile-pic {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--accent);
+    }
+    .name { font-size: 28px; font-weight: 700; margin: 0 }
+    .title { color: var(--muted); margin-top: 2px }
+    .contact { font-size: 14px; color: var(--muted); text-align: right }
+    section { margin-top: 22px }
+    h2 { font-size: 16px; margin: 0 0 10px 0; color: var(--accent) }
+    .item { margin-bottom: 12px }
+    .item h3 { margin: 0; font-size: 15px }
+    .meta { font-size: 13px; color: var(--muted) }
+    ul { margin: 8px 0 0 18px }
+    .skills { display: flex; flex-wrap: wrap; gap: 8px }
+    .skill {
+      background: #eef6ff;
+      padding: 6px 10px;
+      border-radius: 999px;
+      font-size: 13px;
+    }
+    @media (max-width:600px){
+      header { flex-direction: column; align-items: flex-start }
+      .contact { text-align: left }
+    }
+    @media print {
+      body { padding: 0 }
+      .container { box-shadow: none; border-radius: 0 }
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <header>
-      <div>
-        <h1 class="name">Your Name</h1>
-        <div class="title">Job Title · Location</div>
+      <!-- Profile image added here -->
+      <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+
+      <div style="flex:1">
+        <h1 class="name">Sumiyabazar</h1>
+        <div class="title">Data Scientist · Ulaanbaatar</div>
       </div>
+
       <div class="contact">
-        Email: you@example.com<br>
-        Phone: +1 (555) 555-5555 · Portfolio: yoursite.com
+        Email: swapsugi@gmail.com<br>
+        Phone: +976 99757000 · Portfolio: yoursite.com
       </div>
     </header>
 
@@ -46,7 +90,6 @@
 
     <section>
       <h2>Experience</h2>
-
       <div class="item">
         <h3>Senior Product Designer — Acme Corp</h3>
         <div class="meta">Jan 2022 — Present · City, Country</div>
@@ -58,7 +101,7 @@
 
       <div class="item">
         <h3>Product Designer — Beta Studio</h3>
-        <div class="meta">Jun 2019 — Dec 2021 · City, Country</div>
+        <div class="meta">Jun 2024 — Dec 2025 · City, Country</div>
         <ul>
           <li>Designed responsive interfaces and collaborated with engineers to ship features on time.</li>
           <li>Created a design system used across the product suite.</li>
@@ -69,8 +112,8 @@
     <section>
       <h2>Education</h2>
       <div class="item">
-        <h3>B.A. in Design — University Name</h3>
-        <div class="meta">2015 — 2019</div>
+        <h3>B.A. in Design — Asia University</h3>
+        <div class="meta">2025 — 2027</div>
       </div>
     </section>
 
@@ -89,7 +132,7 @@
     <section>
       <h2>Projects</h2>
       <div class="item">
-        <h3>Project Name — Short Tagline</h3>
+        <h3>Github — Short Tagline</h3>
         <div class="meta">Link: yoursite.com/project</div>
         <p>One-sentence description of the project, your role, and impact (metrics if available).</p>
       </div>
